<resources>
    <string name="app_name">Rss阅读器</string>

    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>

    <string name="navigation_drawer_open">打开抽屉</string>
    <string name="navigation_drawer_close">关闭抽屉</string>

    <string name="tab_main">首页</string>
    <string name="tab_all">全部</string>
    <string name="tab_unread">未读</string>
    <string name="tab_star">收藏</string>
    <string name="tab_gallery">图库</string>

    <string name="action_sync">同步</string>
    <string name="action_search">搜索</string>
    <string name="action_share">分享</string>
    <string name="action_share_to">分享到</string>
    <string name="action_expand">全屏</string>
    <string name="action_collapse">取消全屏</string>
    <string name="action_reload">重新加载</string>
    <string name="action_settings">设置</string>
    <string name="action_rename">重命名</string>
    <string name="action_move">移动目录</string>
    <string name="action_can_not_move">不能移动 </string>
    <string name="action_unsubscribe">取消订阅</string>
    <string name="action_download">离线下载</string>
    <string name="action_mark">设置已读</string>
    <string name="action_delete">删除</string>
    <string name="action_add">添加</string>

    <string name="blog_videooptimize">视频源未对设备优化</string>
    <string name="blog_clicktoview">点击观看</string>
    <string name="blog_fontmsg">字体请放置到SD卡RssReader目录下Fonts文件夹</string>

    <string name="channel_markComplete">设置成功</string>
    <string name="channel_markFailed">设置失败</string>

    <string name="empty"></string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <string name="content_errortitle">非常抱歉</string>
    <string name="content_errorcontent">无法获取信息或者错误发生了</string>
    <string name="content_errorload">请点击屏幕重新加载</string>
    <string name="content_savetolibrary">保存到图库</string>
    <string name="content_loading">加载</string>

    <string name="login_title">登录</string>
    <string name="login_msg">正在加载登陆页面</string>
    <string name="login_authing">正在授权中</string>

    <string name="list_empty_view">暂无数据\n下拉重试</string>
    <string name="list_simple_view">简单视图</string>
    <string name="list_comple_xview">复杂视图</string>

    <string name="no_data">暂无数据</string>
    <string name="title_activity_login">登录</string>

    <string name="subscribe_count">订阅数</string>
    <string name="add_rss_complete">添加订阅成功</string>
    <string name="download_complete">离线下载成功</string>

    <string name="blog_unread">未读</string>
    <string name="blog_star">已收藏</string>
    <string name="blog_read">设置已读</string>
    <string name="blog_unstar">未收藏</string>

    <string name="main_exit">再按就要退出啦</string>

    <string name="title_activity_gallery"></string>
    <string name="title_activity_subscribe"></string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="loading">加载…</string>
    <string name="uncategory">未分类</string>

    <string name="read_setting_font">字号</string>
    <string name="read_setting_big_font">大</string>
    <string name="read_setting_small_font">小</string>
</resources>
