<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    > <!--android:background="#6a000000"-->

    <!--<TextView-->
        <!--android:text="阅读设置"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="48dp"-->
        <!--android:layout_margin="5dp"-->
        <!--android:gravity="center"-->
        <!--android:textColor="#ffffffff"-->
        <!--android:textSize="20sp"/>-->

    <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0.5dp"-->
        <!--android:background="#202020"/>-->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="0.25"
            android:id="@+id/action_unsubscribe"
            android:drawableTop="@mipmap/ic_action_delete"
            android:text="@string/action_unsubscribe"
            android:layout_marginBottom="@dimen/margin"
            android:textSize="@dimen/title_text_size"/>

        <TextView
            android:layout_weight="0.25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/action_mark"
            android:drawableTop="@mipmap/ic_action_mark"
            android:text="@string/action_mark"
            android:layout_marginBottom="@dimen/margin"
            android:textSize="@dimen/title_text_size"/>

        <TextView
            android:layout_weight="0.25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/action_download"
            android:drawableTop="@mipmap/ic_action_download"
            android:text="@string/action_download"
            android:layout_marginBottom="@dimen/margin"
            android:textSize="@dimen/title_text_size"/>

        <TextView
            android:layout_weight="0.25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/action_rename"
            android:layout_marginBottom="@dimen/margin"
            android:drawableTop="@mipmap/ic_action_rename"
            android:text="@string/action_rename"
            android:textSize="@dimen/title_text_size"/>

        <TextView
            android:layout_weight="0.25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:id="@+id/action_move"
            android:layout_marginBottom="@dimen/margin"
            android:drawableTop="@mipmap/ic_action_move"
            android:text="@string/action_move"
            android:textSize="@dimen/title_text_size"/>
    </LinearLayout>
</LinearLayout>